# WorkPlan-with-AI

./: .env.example  .gitignore  CHANGELOG.md  README.md  build-all.sh  jsconfig.json  niva.json  package.json  svelte.config.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
src/: app.css  app.html
src-tauri/: 1.txt  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  main.rs
src/lib/components/: AgreementModal.svelte  AiChat.svelte  AiPanel.svelte  AiSettings.svelte  Charts.svelte  ContextMenu.svelte  Dashboard.svelte  GanttChart.svelte  GlobalModal.svelte  LoginModal.svelte  MarkdownRenderer.svelte  MobileNav.svelte  MobileTaskDetail.svelte  MoreMenu.svelte  Notes.svelte  Passwords.svelte  Scheduled.svelte  Settings.svelte  Sidebar.svelte  SplashScreen.svelte  Statistics.svelte  TaskCard.svelte  TaskDetail.svelte  TaskModal.svelte  Templates.svelte
src/lib/i18n/: en.json  index.js  ja.json  zh.json
src/lib/stores/: ai.js  modal.js  navigation.js  notes.js  passwords.js  settings.js  tasks.js  theme.js
src/lib/utils/: ai-providers.js  crypto.js  database-providers.js  export.js  g4f-client.js  local-file-tools.js  markdown.js  open-external.js  textarea-autosize.js  web-search.js
src/routes/: +error.svelte  +layout.svelte  +page.svelte
static/: splashscreen.html
