[package]
name = "workplan"
version = "0.3.1"
description = "WorkPlan with AI - Task Management"
authors = ["MakotoArai-CN"]
edition = "2021"

[lib]
name = "workplan_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "=2.9.5", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-http = "2.5.4"
tauri-plugin-store = "2.4.1"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.23"
url = "2.5"
walkdir = "2.5"
ego-tree = "0.10"
dirs = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
winreg = { version = "0.52", optional = true }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-mobile-onbackpressed-listener = "2.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
